improved parsing issues with skipHash